# gist-sampling

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/: README.md  benchmark_experiments.py  blog_draft.md  synthetic_demo.py  tabular_demo.py
src/gist_sampling/: __init__.py
src/gist_sampling/core/: __init__.py  gist.py  greedy_independent_set.py
src/gist_sampling/distance/: __init__.py  _numba_kernels.py  lazy.py  metrics.py  sparse.py
src/gist_sampling/selectors/: __init__.py  gist_selector.py
src/gist_sampling/utility/: __init__.py  base.py  facility_location.py  sparse_facility_location.py
src/gist_sampling/utils/: __init__.py  validation.py
tests/: conftest.py  test_gist.py  test_optimization.py  test_selector.py  test_utility.py  test_validation.py
