[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gist-sampling"
dynamic = ["version"]
description = "GIST (Greedy Independent Set Thresholding) algorithm for diversity-aware DataFrame downsampling"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Filip" },
]
keywords = ["sampling", "diversity", "submodular", "optimization", "pandas"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "numba>=0.57",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "threadpoolctl>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.9.0",
    "pre-commit>=3.0",
]
extra = [
    "datasets",
    "sentence-transformers",
    "matplotlib",
]
[tool.hatch.version]
path = "src/gist_sampling/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/gist_sampling"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["gist_sampling"]
